docroot/themes/custom/shops/style/scss/components/_menu.scss
.menu {
  &--desktop {
    &__title {
      cursor: pointer;

      font-size: 1.15rem;
      font-weight: 400;

      @extend .h-100;
      @extend .align-items-center;
      @extend .d-flex;
      @extend .m-0;
      @extend .text-white;
      @include icoMoon('chevron-down', 'after');
      @include icoMoon('menu', 'before');

      &:before {
        @extend .pr-3;
      }

      &:after {
        @extend .border-0;
      }

      .show & {
        &:after {
          transform: rotate(180deg);
        }
      }
    }

    &__drop-list {
      .show {
        left: -15px !important;
      }

      a {
        font-size: .875rem;

        @extend .dropdown-item;
        @include hover {
          color: $orange;
        }
      }
    }

    .dropdown-menu {
      @extend .shadow-lg;
    }
  }

  &--mobile {
    cursor: pointer;

    color: $white;

    @extend .mt-auto;
    @extend .d-xl-none;
    @extend .d-lg-none;
    @extend .pr-4;
    @extend .mb-auto;
    @extend .h3;
    @extend .pt-1;
    @extend .col-1;
    @include icoMoon('menu', 'before');
  }
}

$width-menu: 300px;

.mobile-navigation {
  position: fixed;
  z-index: 110;
  top: 0;
  left: 0;

  overflow-x: visible;
  overflow-y: auto;

  width: $width-menu;
  height: 100vh;

  transform: translate(-$width-menu,0);

  background-color: $white;
}

